--- a/example/src/App.scss
+++ b/example/src/App.scss
@@ -11,6 +11,7 @@
     font-size: 12vw;
     color: $grey-light;
     min-height: 200px;
+    height: 100%;
 
     @include desktop {
         font-size: 7vw;
